// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Example Proof: website > should match Development snapshots (Identity keys) > website/dev-transforms/index.html 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Website</title>
  <!--zintl-bootstrap-->
    <script id="zintl-projection">
      (function() {
        const params = new URLSearchParams(window.location.search);
        const l = params.get("lang") || "en" || localStorage.getItem('zintl-locale') || 'en';
        const rtl = ["ar"];
        const deltas = {"ar":{"title":"موقع الويب!"}};
        const originals = {
          title: document.title,
        };
        function apply(locale) {
          if (document.documentElement.lang === locale) return;
          document.documentElement.dir = rtl.includes(locale) ? 'rtl' : 'ltr';
          document.documentElement.lang = locale;
          const hasText = v => typeof v === "string" && v.trim();
          const delta = deltas[locale];
          if (delta) {
            document.title = hasText(delta.title)
              ? delta.title
              : originals.title;
          } else {
            document.title = originals.title;
          }
        }
        window.__zintlApplyHtml = apply;
        if (l !== 'en') {
          apply(l);
        }
      })();
    </script>
  </head>
  <body>
    <div id="app"></div>
    <script type="module" src="/src/main.ts"></script>
  </body>
</html>"
`;

exports[`Example Proof: website > should match Development snapshots (Identity keys) > website/dev-transforms/src/counter.ts 1`] = `
"import { _t } from "virtual:zintl/runtime/internal";
import _zintl_mgr_b_src_main_render from "virtual:zintl/manager/none/entry:b_src_main_render";


export function setupCounter(element: HTMLButtonElement) {
  let counter = 0;
  const setCounter = (count: number) => {
    counter = count;
    // @zintl-note This is a note for the compiler
    element.innerHTML = _t("{counter, plural, =0 {Start Counting Now!} one {Count is One.} =2 {Count is Two} other {Count is #}}", { counter }, { _mgr: _zintl_mgr_b_src_main_render, _bId: "b_src_counter_setupCounter" });
  };
  element.addEventListener("click", () => setCounter(counter + 1));
  setCounter(0);
}"
`;

exports[`Example Proof: website > should match Development snapshots (Identity keys) > website/dev-transforms/src/main.ts 1`] = `
"import { _t, loadI18nInstance } from "virtual:zintl/runtime/internal";
import _zintl_mgr_b_src_main_render from "virtual:zintl/manager/none/entry:b_src_main_render";
import "./style.css";
import typescriptLogo from "./assets/typescript.svg";
import viteLogo from "./assets/vite.svg";
import heroImg from "./assets/hero.png";

import { setupCounter } from "./counter";
import aboutTxt from "./assets/about.txt?raw";

// export function setupCounter(element: HTMLButtonElement) {
//   let counter = 0;
//   const setCounter = (count: number) => {
//     counter = count;
//     element.innerHTML = t(
//       "{counter, plural, zero {Start Counting Now!} one {Count is One.} two {Count is Two} other {Count is #}}",
//       { counter },
//     );
//   };
//   element.addEventListener("click", () => setCounter(counter + 1));
//   setCounter(0);
// }

async function render() {
  const params = new URLSearchParams(window.location.search);

  // zintlizing to search params lang, default to "en", hence no baking allowed for this flow.
  await (globalThis.__zintl_inst = loadI18nInstance({ locale: params.get("lang") || "en", loaders: { ["b_src_main_render"]: _zintl_mgr_b_src_main_render.loader } }));

  const app = document.querySelector<HTMLDivElement>("#app")!;
  app.innerHTML = \`
    <div>
      <a href="https://vite.dev" target="_blank">
        <img src="\${viteLogo}" class="logo" alt="Vite logo" />
      </a>
      <a href="https://www.typescriptlang.org/" target="_blank">
        <img src="\${typescriptLogo}" class="logo vanilla" alt="TypeScript logo" />
      </a>
      <div class="hero-container">
        <img src="\${heroImg}" class="hero-image" alt="Zintl Hero" />
        <!-- @zintl-note This is a note for the compiler -->
        <h1 class="hero-title">\${_t("Zintl I18n", { _mgr: _zintl_mgr_b_src_main_render, _bId: "b_src_main_render" })}</h1>
        <p class="hero-subtitle">\${_t("Compiler-driven internationalization for the modern web.", { _mgr: _zintl_mgr_b_src_main_render, _bId: "b_src_main_render" })}</p>
      </div>

      <div class="card">
        <button id="counter" type="button"></button>
      </div>

      <div class="about-section" style="margin: 20px; padding: 15px; border: 1px solid #ccc; border-radius: 8px; font-family: sans-serif; white-space: pre-line;">
        \${aboutTxt}
      </div>

      <div class="language-switcher">
        <!-- @zintl-ignore -->
        <button id="set-ar">العربية</button>
        <!-- @zintl-ignore -->
        <button id="set-en">English</button>
        <!-- @zintl-ignore -->
        <button id="set-es">Español</button>
      </div>

    </div>
  \`;

  setupCounter(document.querySelector<HTMLButtonElement>("#counter")!);

  // 2. Logic to toggle language using the unified API
  document.querySelector("#set-en")?.addEventListener("click", async () => {
    history.pushState({}, "", "?lang=en");
    await render();
  });
  document.querySelector("#set-ar")?.addEventListener("click", async () => {
    window.history.pushState({}, "", \`?lang=ar\`);
    await render();
  });
  document.querySelector("#set-es")?.addEventListener("click", async () => {
    window.history.pushState({}, "", \`?lang=es\`);
    await render();
  });
}

// Initial render
await render();


if (import.meta.hot) {
  import.meta.hot.accept((newModule) => {
    console.debug("[Zintl] HMR update accepted for: src/main");
  });
}"
`;

exports[`Example Proof: website > should match Development snapshots (Identity keys) > website/dev-transforms/virtual:zintl/content/ar/entry:b_src_main_render 1`] = `
"import _zintl_asset_0 from "<OVERLAY_ROOT>/.tmp/locales/src/assets/about.ar.txt?zintl-raw";
export default {
    "b_src_main_render": {
      "Zintl I18n": "تدويل زينتل",
      "Compiler-driven internationalization for the modern web.": "التدويل الموجه بالمعالجة للويب الحديث.",
    },
    "b_src_counter_setupCounter": {
      "{counter, plural, =0 {Start Counting Now!} one {Count is One.} =2 {Count is Two} other {Count is #}}": (params) => {
    const { counter } = params;
    return \`\${(() => {
      const rule = new Intl.PluralRules('ar').select(params['counter']);
      if (rule === 'zero') return \`ابدأ العد الان!\`;
      if (rule === 'one') return \`العد وصل لواحد\`;
      if (rule === 'two') return \`العد وصل لاثنان\`;
      return \`العد وصل لـ \${params['counter']}\`;
    })()}\`;
  },
    },
    "b_assets": {
    "@zintl/asset:src/assets/about.txt": _zintl_asset_0,
  },
  };
if (import.meta.hot) { import.meta.hot.accept(); }"
`;

exports[`Example Proof: website > should match Development snapshots (Identity keys) > website/dev-transforms/virtual:zintl/content/es/entry:b_src_main_render 1`] = `
"import _zintl_asset_0 from "<OVERLAY_ROOT>/.tmp/locales/src/assets/about.es.txt?zintl-raw";
export default {
    "b_src_main_render": {
      "Zintl I18n": "¡Zintl I18n",
      "Compiler-driven internationalization for the modern web.": "La internacionalización impulsada por el compilador para la web moderna.",
    },
    "b_src_counter_setupCounter": {
      "{counter, plural, =0 {Start Counting Now!} one {Count is One.} =2 {Count is Two} other {Count is #}}": (params) => {
    const { counter } = params;
    return \`\${(() => {
      if (params['counter'] == 0) return \`Empieza a contar ahora!\`;
      const rule = new Intl.PluralRules('es').select(params['counter']);
      if (rule === 'one') return \`El contador es uno.\`;
      if (rule === 'two') return \`El contador es dos.\`;
      return \`El contador es \${params['counter']}\`;
    })()}\`;
  },
    },
    "b_assets": {
    "@zintl/asset:src/assets/about.txt": _zintl_asset_0,
  },
  };
if (import.meta.hot) { import.meta.hot.accept(); }"
`;

exports[`Example Proof: website > should match Development snapshots (Identity keys) > website/dev-transforms/virtual:zintl/manager/none/entry:b_src_main_render 1`] = `
"import _zintl_asset_0 from "<MONOREPO_ROOT>/examples/website/src/assets/about.txt?zintl-raw";
export default { id: "b_src_main_render", loader: (locale) => {
      switch(locale) { 
        case "en":
          return {
    "b_src_main_render": {
      "Zintl I18n": "Zintl I18n",
      "Compiler-driven internationalization for the modern web.": "Compiler-driven internationalization for the modern web.",
    },
    "b_src_counter_setupCounter": {
      "{counter, plural, =0 {Start Counting Now!} one {Count is One.} =2 {Count is Two} other {Count is #}}": (params) => {
    const { counter } = params;
    return \`\${(() => {
      if (params['counter'] == 0) return \`Start Counting Now!\`;
      if (params['counter'] == 2) return \`Count is Two\`;
      const rule = new Intl.PluralRules('en').select(params['counter']);
      if (rule === 'one') return \`Count is One.\`;
      return \`Count is \${params['counter']}\`;
    })()}\`;
  },
    },
    "b_assets": {
    "@zintl/asset:src/assets/about.txt": _zintl_asset_0,
  },
  };
                case "ar":
          return import(/* @vite-ignore */ "virtual:zintl/content/ar/entry:b_src_main_render").then(m => m.default);
        case "es":
          return import(/* @vite-ignore */ "virtual:zintl/content/es/entry:b_src_main_render").then(m => m.default);
        default: return {};
      }
    } };
if (import.meta.hot) {
  import.meta.hot.accept((newModule) => {
    if (newModule?.default && typeof globalThis !== "undefined" && globalThis.__zintl_active) {
      globalThis.__zintl_active.registerLoader(newModule.default.id, newModule.default.loader);
    }
  });
}"
`;

exports[`Example Proof: website > should match Development snapshots (Identity keys) > website/dev-transforms/virtual:zintl/runtime/internal 1`] = `
"//#region src/runtime/store.ts
let storeStorage = null;
if (typeof window === "undefined" && typeof process !== "undefined") try {
	const asyncHooks = null;
	if (asyncHooks && asyncHooks.AsyncLocalStorage) storeStorage = new asyncHooks.AsyncLocalStorage();
} catch {}
var I18nStore = class {
	locale = "";
	catalogs = {};
	debug = typeof process !== "undefined" && process.env.ZINTL_DEBUG === "true" || false;
	pendingBoundaries = /* @__PURE__ */ new Set();
	listeners = /* @__PURE__ */ new Set();
	constructor() {
		if (typeof document !== "undefined" && document.documentElement) this.locale = document.documentElement.lang || "";
		if (!this.locale && typeof window !== "undefined") try {
			this.locale = localStorage.getItem("zintl-locale") || "";
		} catch {}
		if (!this.locale) try {
			if (storeStorage) {
				const active = storeStorage.getStore();
				if (active && active !== this) this.locale = active.locale;
			}
		} catch {}
	}
	subscribe(listener) {
		this.listeners.add(listener);
		return () => this.listeners.delete(listener);
	}
	notify() {
		this.listeners.forEach((l) => l());
	}
	addCatalogs(newCatalogs) {
		let changed = false;
		for (const [locale, boundaries] of Object.entries(newCatalogs)) {
			if (!this.catalogs[locale]) this.catalogs[locale] = {};
			for (const [boundaryId, messages] of Object.entries(boundaries)) {
				if (!this.catalogs[locale][boundaryId]) this.catalogs[locale][boundaryId] = {};
				for (const [key, value] of Object.entries(messages)) if (this.catalogs[locale][boundaryId][key] !== value) {
					this.catalogs[locale][boundaryId][key] = value;
					changed = true;
				}
			}
		}
		if (changed) {
			if (typeof process !== "undefined" && process.env.NODE_ENV !== "production" && this.debug) console.debug("[Zintl] Catalogs updated:", Object.keys(newCatalogs).flatMap((l) => Object.keys(newCatalogs[l]).map((b) => \`\${l}/\${b}\`)));
			this.notify();
		}
	}
	async setLocale(locale) {
		if (!locale) return;
		if (typeof window !== "undefined") {
			if (window.__zintlApplyHtml) window.__zintlApplyHtml(locale);
			try {
				localStorage.setItem("zintl-locale", locale);
			} catch {}
		}
		if (this.locale === locale && Object.keys(this.catalogs[locale] || {}).length > 0) return;
		if (typeof process !== "undefined" && process.env.NODE_ENV !== "production" && this.debug) console.debug(\`[Zintl] Switching to locale: \${locale}\`);
		this.locale = locale;
		const activePromises = [];
		for (const [boundaryId, loader] of globalRegistry.entries()) try {
			const result = loader(locale);
			const processResult = (res) => {
				if (!res) return;
				this.addCatalogs({ [locale]: res });
			};
			if (isThenable(result)) {
				this.pendingBoundaries.add(boundaryId);
				activePromises.push(result.then((res) => {
					processResult(res);
					this.pendingBoundaries.delete(boundaryId);
				}));
			} else processResult(result);
		} catch (err) {
			if (typeof process !== "undefined" && process.env.NODE_ENV !== "production") console.error(\`[Zintl] Failed to load catalog for boundary "\${boundaryId}" (\${locale})\`, err);
		}
		if (activePromises.length > 0) {
			await Promise.all(activePromises);
			if (typeof process !== "undefined" && process.env.NODE_ENV !== "production" && this.debug) console.debug(\`[Zintl] Locale "\${locale}" hydrated.\`);
			this.notify();
		} else {
			if (typeof process !== "undefined" && process.env.NODE_ENV !== "production" && this.debug) console.debug(\`[Zintl] Locale "\${locale}" hydrated.\`);
			this.notify();
		}
	}
	registerLoader(boundaryId, loader) {
		globalRegistry.set(boundaryId, loader);
		const result = loader(this.locale);
		const processResult = (res) => {
			if (!res) return;
			this.addCatalogs({ [this.locale]: res });
		};
		if (isThenable(result)) {
			this.pendingBoundaries.add(boundaryId);
			return result.then((res) => {
				processResult(res);
				this.pendingBoundaries.delete(boundaryId);
			});
		} else processResult(result);
	}
};
const globalRegistry = /* @__PURE__ */ new Map();
let currentInstance = new I18nStore();
function getActiveInstance() {
	if (storeStorage) {
		const store = storeStorage.getStore();
		if (store) return store;
	}
	return currentInstance;
}
function setActiveInstance(instance) {
	currentInstance = instance;
}
function runInRequestScope(urlOrReq, locales, defaultLocale, callback) {
	if (typeof window === "undefined" && storeStorage) {
		let locale = defaultLocale;
		if (urlOrReq) {
			let pathname = "";
			if (typeof urlOrReq === "string") pathname = urlOrReq;
			else if (typeof urlOrReq === "object") pathname = urlOrReq.url || urlOrReq.path || "";
			const parts = pathname.split("/").filter(Boolean);
			if (parts.length > 0 && locales.includes(parts[0])) locale = parts[0];
		}
		const store = new I18nStore();
		store.locale = locale;
		return storeStorage.run(store, () => {
			for (const [, loader] of globalRegistry.entries()) try {
				const result = loader(locale);
				const processResult = (res) => {
					if (!res) return;
					store.addCatalogs({ [locale]: res });
				};
				if (isThenable(result)) result.then(processResult);
				else processResult(result);
			} catch {}
			return callback();
		});
	}
	return callback();
}
function registerLoader(boundaryId, loader) {
	globalRegistry.set(boundaryId, loader);
	const instance = getActiveInstance();
	try {
		const result = loader(instance.locale);
		const processResult = (res) => {
			if (!res) return;
			instance.addCatalogs({ [instance.locale]: res });
		};
		if (isThenable(result)) return result.then((res) => {
			processResult(res);
		});
		else processResult(result);
	} catch (err) {
		if (typeof process !== "undefined" && process.env.NODE_ENV !== "production") console.error(\`[Zintl] Failed to load initial catalog for boundary "\${boundaryId}"\`, err);
	}
}
function unregisterLoader(boundaryId) {
	globalRegistry.delete(boundaryId);
}
function setLocale(locale) {
	return getActiveInstance().setLocale(locale);
}
function getLocale() {
	return getActiveInstance().locale;
}
function subscribe(listener) {
	return getActiveInstance().subscribe(listener);
}
function addCatalogs(catalogs) {
	return getActiveInstance().addCatalogs(catalogs);
}
function isThenable(obj) {
	return obj && typeof obj.then === "function";
}
//#endregion
//#region src/runtime/resolver.ts
function _t(key, params = {}, options) {
	const instance = getActiveInstance();
	const catalogs = instance.catalogs;
	const locale = instance.locale;
	const effectiveParams = options ? {
		...params,
		...options
	} : params;
	const mgr = effectiveParams._mgr;
	const boundaryId = mgr?.id;
	const targetBId = effectiveParams._bId || boundaryId;
	const boundaryCatalog = targetBId ? catalogs[locale]?.[targetBId] : void 0;
	const message = boundaryCatalog ? boundaryCatalog[key] : void 0;
	if (message === void 0) {
		if (mgr) {
			instance.registerLoader(mgr.id, mgr.loader);
			if (typeof process !== "undefined" && process.env.NODE_ENV !== "production") console.warn(\`[Zintl] Missing key "\${key}" in boundary "\${boundaryId}". Triggering hydration...\`);
			return \`\`;
		}
		if (typeof process !== "undefined" && process.env.NODE_ENV !== "production") console.warn(\`[Zintl] Missing key "\${key}" and no manager provided.\`);
		return \`\`;
	}
	if (typeof message === "function") return message(params);
	if (typeof message !== "string") return "";
	const { _mgr, _bId, _tags, ...restParams } = effectiveParams;
	let interpolated = interpolate(message, restParams);
	if (_tags && Array.isArray(_tags)) for (const entry of _tags) {
		interpolated = interpolated.replaceAll(\`<\${entry.alias}/>\`, entry.originalOpen);
		interpolated = interpolated.replaceAll(\`<\${entry.alias} />\`, entry.originalOpen);
		interpolated = interpolated.replaceAll(\`<\${entry.alias}>\`, entry.originalOpen);
		interpolated = interpolated.replaceAll(\`</\${entry.alias}>\`, \`</\${entry.tagName}>\`);
	}
	return interpolated;
}
function interpolate(message, params) {
	if (message === null || message === void 0) return "";
	return String(message).replace(/\\{(\\w+)\\}/g, (match, key) => {
		return params[key]?.toString() ?? match;
	});
}
//#endregion
//#region src/runtime/registry.ts
/**
* A helper for the Zintl compiler to register a boundary loader.
* This is designed to be called with a minimal footprint in the transformed source.
*/
function registerZintlLoader(boundaryId, loader) {
	return registerLoader(boundaryId, loader);
}
//#endregion
//#region src/runtime/internal.ts
async function zintl(locale) {
	const activeLocale = locale || (typeof document !== "undefined" ? document.documentElement.lang : "");
	if (activeLocale) await setLocale(activeLocale);
}
/**
* Loads and configures the i18n instance for a boundary.
* Registers loaders and merges new catalogs into the existing state.
*
* INTERNAL: Targeted by the compiler after zintl() macro expansion.
*/
async function loadI18nInstance(config = {}) {
	const store = new I18nStore();
	setActiveInstance(store);
	if (typeof globalThis !== "undefined") globalThis.__zintl_active = store;
	try {
		if (config.debug !== void 0) store.debug = config.debug;
		if (config.locale) store.locale = config.locale;
		if (config.catalogs) store.addCatalogs(config.catalogs);
		const promises = [];
		if (config.loaders) for (const [boundaryId, loader] of Object.entries(config.loaders)) {
			const res = registerLoader(boundaryId, loader);
			if (res && typeof res.then === "function") promises.push(res);
		}
		if (config.locale) promises.push(store.setLocale(config.locale));
		if (promises.length > 0) await Promise.all(promises);
	} finally {}
	return {
		locale: store.locale,
		get debug() {
			return store.debug;
		},
		set debug(value) {
			store.debug = value;
		},
		setLocale: (l) => store.setLocale(l),
		subscribe: (cb) => store.subscribe(cb),
		t: (key, params) => {
			const prev = getActiveInstance();
			setActiveInstance(store);
			try {
				return _t(key, params);
			} finally {
				setActiveInstance(prev);
			}
		}
	};
}
//#endregion
export { _t, _t as t, addCatalogs, getLocale, loadI18nInstance, registerLoader, registerZintlLoader, runInRequestScope, setLocale, subscribe, unregisterLoader as unregisterZintlLoader, zintl };"
`;
